# sda

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: bgrun.md  log.md
examples/: __init__.py  bgrun_example.py  log_example.py
src/sda/: __init__.py  log.py
src/sda/bgrun/: __init__.py  _exceptions.py  _task.py  _worker.py
tests/bgrun/: test_task.py  test_worker.py
tests/log/: test_setup.py
