[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sda"
version = "0.1.0"
description = "長時間処理を spawn/forkserver サブプロセスで実行し、ゾンビ検知・リトライ・ログ転送を提供するライブラリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/sda"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
